Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Added .zope-external-edit and ZopeEdit.ini ExternalEditor configuration file
  example respectively for Unix and Windows platforms.
Bug fixes:
~~~~~~~~~~
- Added a unit test to check the validity of the CSS generated by CPSSkins.
- Fixed the validity of the CSS generated by the CPSDefault default theme.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-