@@ -1,6 +1,7 @@
 # (C) Copyright 2006 Nuxeo SAS <http://nuxeo.com>
 # Authors:
 # Stefane Fermigier <sf@nuxeo.com>
+# M.-A. Darche <madarche@nuxeo.com>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License version 2 as published
@@ -26,7 +27,10 @@ import unittest
 
 from Products.CMFCore.tests.base.utils import has_path
 from Products.CMFCore.utils import getToolByName
+
 from Products.CPSDefault.tests.CPSTestCase import CPSTestCase
+from Products.CPSUtil.tests.web_conformance import assertValidXhtml
+from Products.CPSUtil.tests.web_conformance import assertValidCss
 
 class TestSimple(CPSTestCase):
 
@@ -53,13 +57,13 @@ class TestSimple(CPSTestCase):
                    'atom.css', 'rss.css']
         for css_name in ALL_CSS:
             css_content = self.portal[css_name](self.portal)
-            self.assertValidCss(css_content, css_name)
+            assertValidCss(css_content, css_name)
 
         # Testing the CSS page generated by CPSSkins with the theme config
         view_id = 'renderCSS'
         method = getattr(self.portal.portal_themes.default, view_id)
         rendering = method()
-        self.assertValidCss(rendering, view_id)
+        assertValidCss(rendering, view_id)
 
 
     def testAnonymousSkins(self):
@@ -70,17 +74,17 @@ class TestSimple(CPSTestCase):
         for view_id in view_ids:
             method = getattr(self.portal, view_id)
             rendering = method()
-            self.assertValidXHTML(rendering, view_id)
+            assertValidXhtml(rendering, view_id)
             # Testing the CSS pages referenced from a web page along with
             # the inlined CSS property contained in the web page itself.
-            self.assertValidCss(rendering, view_id, input_format='html')
+            assertValidCss(rendering, view_id, input_format='html')
 
 
 class TestSimpleAsRoot(TestSimple):
     login_id = 'manager'
 
     def testAdminSkinsAtRoot(self):
-        self.assertValidXHTML(self.portal.config_form(), "config_form")
+        assertValidXhtml(self.portal.config_form(), "config_form")
         return
         # XXX: move this to CPSDirectory ?
         self.assert_(self.portal.cpsdirectory_view())
@@ -103,10 +107,10 @@ class TestSimpleAsRoot(TestSimple):
                 method = getattr(folder, view_id)
                 rendering = method()
                 ressource_name = "%s/%s" % (folder_id, view_id)
-                self.assertValidXHTML(rendering, ressource_name)
+                assertValidXhtml(rendering, ressource_name)
                 # Testing the CSS pages referenced from a web page along with
                 # the inlined CSS property contained in the web page itself.
-                self.assertValidCss(rendering, ressource_name)
+                assertValidCss(rendering, ressource_name)
 
     def testLocalRoles(self):
         # Change local roles using the skin scripts
