@@ -11,4 +11,5 @@ Bug fixes:
 - Fixed the validity of the CSS generated by the CPSDefault default theme.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
--
+- Moved all the web standards (XML, XHTML, HTML, CSS) testing methods from
+  CPSTestCase into CPSUtil.tests.web_conformance.
